# Mung_Backend

./: .gitignore  manage.py  pyproject.toml  requirements.txt
config/: .env  settings.py  urls.py
member/: authentication.py  forms.py  models.py  serializers.py  views.py
member/migrations/: 0001_initial.py  0002_user_social_provider.py
member/routers/: users_router.py
member/schemas/: users_schema.py
member/tests/: test_pw_ch_service.py
pet/: apps.py  models.py  serializers.py  views.py
pet/migrations/: 0001_initial.py
pet/routers/: pets_router.py
pet/schemas/: pets_schema.py
